# deepseek-ocr

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: prd.md
scripts/: deepseek-ocr.service  deploy.sh  setup_ollama.sh  setup_vllm.sh
src/deepseek_ocr/: __init__.py  config.py
src/deepseek_ocr/cli/: CLAUDE.md  __init__.py  main.py
src/deepseek_ocr/core/: CLAUDE.md  __init__.py  markdown_writer.py  ocr_cache.py  ocr_engine.py  output_parser.py  pdf_reader.py  pdf_type_detector.py  pdf_writer.py  pipeline.py  text_pdf_extractor.py  text_pdf_translated_writer.py  translated_pdf_writer.py  translation_cache.py  translator.py
src/deepseek_ocr/utils/: logger.py
src/deepseek_ocr/web/: CLAUDE.md  app.py  routes.py
src/deepseek_ocr/web/static/: app.js  index.html  style.css
