[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-ocr"
version = "0.2.0"
description = "使用 DeepSeek-OCR-2 模型将英文扫描PDF转化为可搜索PDF和Markdown"
requires-python = ">=3.12"

dependencies = [
    "vllm==0.8.5",
    "torch>=2.6.0",
    "transformers>=4.46.3",
    "PyMuPDF>=1.25",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "Pillow>=12.0",
    "matplotlib>=3.8",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
deepseek-ocr = "deepseek_ocr.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
